# haxecraft

./: .gitattributes  .gitignore  Makefile  README-M0.md  README-M1.md  README-M2-SP3.md  README-SUBPROJECT1.md  README-SUBPROJECT2.md  README-SUBPROJECT3.md  README-SUBPROJECT4.md  README-SUBPROJECT5.md  README-WINDOWS.md  build.hxml  build_macos.sh  build_native.ps1  build_native.sh  docker-compose.yml  run-client.ps1  run-client.sh  run-integration.ps1  run-integration.sh  run-server.ps1  run-server.sh  run.ps1  run.sh  ssl.hdll  stbtt.hdll
.github/workflows/: ci.yml
client/: build-client-test.hxml  build-client.hxml
client/test/: TestChatCommandParser.hx  TestMain.hx  TestSpriteCatalog.hx
db/: apply-migrations.ps1  apply-migrations.sh  rollback_0005_entities.sql
db/migrations/: 0001_accounts.sql  0002_characters.sql  0003_character_items.sql  0004_zone_tile_overrides.sql  0005_entities.sql  0006_combat_stats.sql
prebuilt/: README.md
prebuilt/windows/: stbtt.hdll
res/: README.md
res/assets/: icons.aseprite  sprites.aseprite  sprites2.aseprite  sprites_items.aseprite  sprites_monsters.aseprite  sprites_player.aseprite  sprites_terrain.aseprite  sprites_ui.aseprite
res/maps/: starter.tmx
server/: build-gateway.hxml  build-server-cli.hxml  build-server-test.hxml  build-server.hxml  build-zone.hxml
server/test/: TestAccountDal.hx  TestCharacterDal.hx  TestCombat.hx  TestCrafting.hx  TestDbClient.hx  TestFrameBuffer.hx  TestHpRegen.hx  TestItem.hx  (+17 more)
shared/: build-shared-test.hxml
src/: Game.hx  InputHandler.hx
tools/: sync-hdll.ps1  sync-hdll.sh
tools/hl-stbtt/: CMakeLists.txt  build-windows.ps1  stbtt_hl.c
(+401 files in other folders)
